--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,9 +1,11 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="secondary">
     <ion-title>
-      Tab Three
+      Feedback Us
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <p>Click here to give <a target=_blank href="https://docs.google.com/forms/d/e/1FAIpQLScM1BXeBolRnxIh2Wx4c1srn-jpl9de7VjY_nowUS-Bv4uVYw/viewform">feedback</a></p>
+</ion-content>
