--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -7,5 +7,5 @@
 </ion-header>
 
 <ion-content>
-  <p>Click here to give <a target=_blank href="https://docs.google.com/forms/d/e/1FAIpQLScM1BXeBolRnxIh2Wx4c1srn-jpl9de7VjY_nowUS-Bv4uVYw/viewform">feedback</a></p>
+  <p>Click here to give <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScM1BXeBolRnxIh2Wx4c1srn-jpl9de7VjY_nowUS-Bv4uVYw/viewform">feedback</a></p>
 </ion-content>
