--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="secondary">
-    <ion-title>
+    <ion-title text-center>
       Feedback Us
     </ion-title>
   </ion-toolbar>
