--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,9 +1,13 @@
 <ion-header>
   <ion-toolbar color="secondary">
-    <ion-title>
+    <ion-title text-center>
       Contact Us
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <ion-card class="welcome-card">
+    <ion-img src="/assets/contactnew.jpg"></ion-img>
+    </ion-card>
+</ion-content>
