--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -8,6 +8,7 @@
 
 <ion-content>
   <ion-card class="welcome-card">
-    <ion-img src="/assets/contactnew.jpg"></ion-img>
-    </ion-card>
+    <ion-img src="/assets/history.jpg"></ion-img>
+  </ion-card>
+  
 </ion-content>
