--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -10,5 +10,17 @@
   <ion-card class="welcome-card">
     <ion-img src="/assets/history.jpg"></ion-img>
   </ion-card>
+
+  <ion-card class="welcome-card">
+    <ion-img src="/assets/bilwara.jpg"></ion-img>
+    <ion-card-header>
+      <ion-card-subtitle>Get Started</ion-card-subtitle>
+      <ion-card-title>Bhilwara Infotechnology LTD Head Quarters</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
+    </ion-card-content>
+  </ion-card>
+  
   
 </ion-content>
