--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -18,7 +18,7 @@
       <ion-card-title>Bhilwara Infotechnology LTD Head Quarters</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
+      <p>Now that app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
     </ion-card-content>
   </ion-card>
   
