--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -6,6 +6,9 @@
   </ion-toolbar>
 </ion-header>
 
+<ion-card class="welcome-card">
+  <ion-img src="/assets/feedback.jpg"></ion-img>
+</ion-card>
 <ion-content>
   <p>Click here to give <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScM1BXeBolRnxIh2Wx4c1srn-jpl9de7VjY_nowUS-Bv4uVYw/viewform">feedback</a></p>
 </ion-content>
