--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -12,13 +12,13 @@
   </ion-card>
 
   <ion-card class="welcome-card">
-    <ion-img src="/assets/bilwara.jpg"></ion-img>
-    <ion-card-header>
-      <ion-card-subtitle>Get Started</ion-card-subtitle>
-      <ion-card-title>Bhilwara Infotechnology LTD Head Quarters</ion-card-title>
+    <ion-img src="/assets/logo.jpg"></ion-img>
+    <ion-card-header>      
+      <ion-card-title color="secondary">Bhilwara Infotechnology LTD Head Quarters</ion-card-title>
+      <ion-card-subtitle>Who we are</ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
-      <p>Now that app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
+      <p>Bhilwara Infotechnology Limited (BIL) is a dedicated technology consulting and implementation company and is a part of the LNJ Bhilwara Group, one of the largest employers in India.</p>
     </ion-card-content>
   </ion-card>
   
