--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -18,4 +18,44 @@
       </ion-card-content>
     </ion-card>
     
+    <ion-card>
+      <ion-item>
+        <ion-icon name="pin" slot="start"></ion-icon>
+        <ion-label>Project one</ion-label>
+        <ion-button fill="outline" slot="end">View</ion-button>
+      </ion-item>
+    
+      <ion-card-content>
+        This is content, without any paragraph or header tags,
+        within an ion-card-content element.
+      </ion-card-content>
+    </ion-card>
+    
+    <ion-card>
+      <ion-item>
+        <ion-icon name="pin" slot="start"></ion-icon>
+        <ion-label>Project Two</ion-label>
+        <ion-button fill="outline" slot="end">View</ion-button>
+      </ion-item>
+    
+      <ion-card-content>
+        This is content, without any paragraph or header tags,
+        within an ion-card-content element.
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+      <ion-item>
+        <ion-icon name="pin" slot="start"></ion-icon>
+        <ion-label>Project Three</ion-label>
+        <ion-button fill="outline" slot="end">View</ion-button>
+      </ion-item>
+    
+      <ion-card-content>
+        This is content, without any paragraph or header tags,
+        within an ion-card-content element.
+      </ion-card-content>
+    </ion-card>
+   
+
 </ion-content>
