--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -47,7 +47,7 @@
     <ion-card>
       <ion-item>
         <ion-icon name="pin" slot="start"></ion-icon>
-        <ion-label>Project Three</ion-label>
+        <ion-label>Project Threee</ion-label>
         <ion-button fill="outline" slot="end">View</ion-button>
       </ion-item>
     
